--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
@@ -11,19 +11,26 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "autoprefixer": "^10.4.16",
+    "fastclick": "^1.0.6",
     "pinia": "^2.1.7",
+    "vant": "^4.7.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
+    "@vant/auto-import-resolver": "^1.0.1",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
+    "postcss-pxtorem": "^6.0.0",
     "prettier": "^3.0.3",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
     "vitest": "^0.34.6"
   }
