--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "amfe-flexible": "^2.2.1",
+        "animate.css": "^4.1.1",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.2",
         "dayjs": "^1.11.10",
@@ -28,6 +29,8 @@
         "@rushstack/eslint-patch": "^1.3.3",
         "@vant/auto-import-resolver": "^1.0.1",
         "@vitejs/plugin-vue": "^4.4.0",
+        "@vitejs/plugin-vue-jsx": "^3.1.0",
+        "@vue/babel-plugin-jsx": "^1.1.5",
         "@vue/eslint-config-prettier": "^8.0.0",
         "@vue/test-utils": "^2.4.1",
         "cross-env": "^7.0.3",
