--- a/.env.production
+++ b/.env.production
@@ -8,7 +8,7 @@ VITE_BASE_API= /api
 VITE_BASE_UPLOAD_API= /upload
 
 # Whether to open mock
-VITE_USE_MOCK = true
+VITE_USE_MOCK = false
 
 # Delete console
 VITE_DROP_CONSOLE = true
