--- a/package.json
+++ b/package.json
@@ -1,53 +1,53 @@
 {
-    "name": "vue3project",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "dev": "vite --host 0.0.0.0",
-        "build": "vite build",
-        "preview": "vite preview",
-        "test:unit": "vitest",
-        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-        "format": "prettier --write src/"
-    },
-    "dependencies": {
-        "amfe-flexible": "^2.2.1",
-        "animate.css": "^4.1.1",
-        "autoprefixer": "^10.4.16",
-        "axios": "^1.6.2",
-        "dayjs": "^1.11.10",
-        "fastclick": "^1.0.6",
-        "lodash-es": "^4.17.21",
-        "mockjs": "^1.1.0",
-        "pinia": "^2.1.7",
-        "pinia-plugin-persistedstate": "^3.2.0",
-        "vant": "^4.7.2",
-        "vue": "^3.3.4",
-        "vue-router": "^4.2.5"
-    },
-    "devDependencies": {
-        "@rushstack/eslint-patch": "^1.3.3",
-        "@vant/auto-import-resolver": "^1.0.1",
-        "@vitejs/plugin-vue": "^4.4.0",
-        "@vitejs/plugin-vue-jsx": "^3.1.0",
-        "@vue/babel-plugin-jsx": "^1.1.5",
-        "@vue/eslint-config-prettier": "^8.0.0",
-        "@vue/test-utils": "^2.4.1",
-        "cross-env": "^7.0.3",
-        "eslint": "^8.49.0",
-        "eslint-plugin-vue": "^9.17.0",
-        "jsdom": "^22.1.0",
-        "postcss-pxtorem": "^6.0.0",
-        "prettier": "^3.0.3",
-        "rollup-plugin-visualizer": "^5.9.2",
-        "sass": "^1.69.5",
-        "unplugin-auto-import": "^0.16.7",
-        "unplugin-vue-components": "^0.25.2",
-        "vite": "^4.4.11",
-        "vite-plugin-compression": "^0.5.1",
-        "vite-plugin-html": "^3.2.0",
-        "vite-plugin-mock": "^2.9.6",
-        "vite-plugin-svg-icons": "^2.0.1",
-        "vitest": "^0.34.6"
-    }
+  "name": "vue3project",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite --host 0.0.0.0",
+    "build": "cross-env NODE_ENV=production vite build",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
+  },
+  "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "animate.css": "^4.1.1",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "fastclick": "^1.0.6",
+    "lodash-es": "^4.17.21",
+    "mockjs": "^1.1.0",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "vant": "^4.7.2",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@rushstack/eslint-patch": "^1.3.3",
+    "@vant/auto-import-resolver": "^1.0.1",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/babel-plugin-jsx": "^1.1.5",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/test-utils": "^2.4.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "jsdom": "^22.1.0",
+    "postcss-pxtorem": "^6.0.0",
+    "prettier": "^3.0.3",
+    "rollup-plugin-visualizer": "^5.9.2",
+    "sass": "^1.69.5",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.25.2",
+    "vite": "^4.4.11",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vitest": "^0.34.6"
+  }
 }
