--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pinia-plugin-persistedstate": "^3.2.0",
     "vant": "^4.7.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
