新增husky，去除AutoImport自动导入

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+/userData
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
