--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "prepare": "husky install"
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
@@ -16,7 +17,10 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "fastclick": "^1.0.6",
+    "lint-staged": "^15.1.0",
     "lodash-es": "^4.17.21",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
@@ -35,11 +39,11 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.49.0",
+    "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
     "postcss-pxtorem": "^6.0.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.69.5",
     "unplugin-auto-import": "^0.16.7",
@@ -49,6 +53,23 @@
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "husky": "^8.0.0"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx,vue}": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ],
+    "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
+      "prettier --write--parser json"
+    ],
+    "package.json": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
   }
 }
