--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vant/auto-import-resolver": "^1.0.1",
     "@vitejs/plugin-vue": "^4.4.0",
@@ -41,6 +43,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.17.0",
+    "husky": "^8.0.0",
     "jsdom": "^22.1.0",
     "postcss-pxtorem": "^6.0.0",
     "prettier": "^3.1.0",
@@ -53,8 +56,7 @@
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vitest": "^0.34.6",
-    "husky": "^8.0.0"
+    "vitest": "^0.34.6"
   },
   "lint-staged": {
     "*.{js,ts,tsx,jsx,vue}": [
