--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit:comment": "引导设置规范化的提交信息",
+    "commit": "git-cz"
   },
   "dependencies": {
+    "@vueuse/core": "^10.6.1",
     "amfe-flexible": "^2.2.1",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.16",
@@ -40,7 +43,11 @@
     "@vue/babel-plugin-jsx": "^1.1.5",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
+    "commitizen": "^4.3.0",
+    "commitlint-config-cz": "^0.13.3",
     "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^7.0.0",
     "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
@@ -49,6 +56,8 @@
     "prettier": "^3.1.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.5",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
@@ -73,5 +82,10 @@
     "*.md": [
       "prettier --write"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
   }
 }
