--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "prepare": "husky install",
-    "commit:comment": "引导设置规范化的提交信息",
-    "commit": "git-cz"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@icon-park/vue-next": "^1.4.2",
