--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,13 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/index.html"
+      "dest": "dist/$1"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
