--- a/vercel.json
+++ b/vercel.json
@@ -8,16 +8,11 @@
       }
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/$1"
-    }
-  ],
+
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/dist/index.html"
+      "destination": "/"
     }
   ]
 }
