feature: 批量操作，功能新增’
undefined

--- a/.env.development
+++ b/.env.development
@@ -14,10 +14,12 @@ VITE_USE_MOCK = true
 VITE_DROP_CONSOLE = false
 
 #后台接口全路径地址(必填)
-VITE_GLOB_DOMAIN_URL=https://poe.faith.wang/
+# VITE_GLOB_DOMAIN_URL=https://poe.faith.wang/
+VITE_GLOB_DOMAIN_URL=https://www.idlepoe.com/
 
 #后台接口父地址(必填)
-VITE_GLOB_API_URL=https://poe.faith.wang/api
+# VITE_GLOB_API_URL=https://poe.faith.wang/api
+VITE_GLOB_API_URL=https://www.idlepoe.com/api
 
 # 接口前缀
 VITE_GLOB_API_URL_PREFIX=
