--- a/.env.production
+++ b/.env.production
@@ -14,11 +14,11 @@ VITE_USE_MOCK = false
 VITE_DROP_CONSOLE = true
 
 #后台接口全路径地址(必填)
-VITE_GLOB_DOMAIN_URL=http://poe.faith.wang/
-
+# VITE_GLOB_DOMAIN_URL=http://poe.faith.wang/
+VITE_GLOB_DOMAIN_URL=https://www.idlepoe.com/
 #后台接口父地址(必填)
-VITE_GLOB_API_URL=http://poe.faith.wang/api
-
+# VITE_GLOB_API_URL=http://poe.faith.wang/api
+VITE_GLOB_API_URL=https://www.idlepoe.com/api
 # 接口前缀
 VITE_GLOB_API_URL_PREFIX=
 
