--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vant": "^4.7.2",
+    "vconsole": "^3.15.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue-virtual-scroller": "^2.0.0-beta.8"
