--- a/.env.production
+++ b/.env.production
@@ -11,7 +11,7 @@ VITE_BASE_UPLOAD_API= /upload
 VITE_USE_MOCK = false
 
 # Delete console
-VITE_DROP_CONSOLE = true
+VITE_DROP_CONSOLE = false
 
 #后台接口全路径地址(必填)
 # VITE_GLOB_DOMAIN_URL=http://poe.faith.wang/
