--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.10",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "event-source-polyfill": "^1.0.31",
     "fastclick": "^1.0.6",
     "lint-staged": "^15.1.0",
     "localforage": "^1.10.0",
@@ -45,6 +46,7 @@
     "@vue/babel-plugin-jsx": "^1.1.5",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
+    "code-inspector-plugin": "^0.6.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.17.0",
